# ALGO

./: .coverage  .gitattributes  .gitignore  .sample.env  10.py  Flask app.py  Nifty50_SMA_Crossover_Daywise_Results.csv  Nifty50_SMA_Crossover_Trade_Log.csv  README.md  backtest_engine.py  backtester.py  config.json.example  credentials.py  data_downloader.py  ema_cross_atr_stops.py  event_driven_backtester.py  fetch_data.py  gitignore.txt  ma_crossover.py  main.py  pyproject.toml  reporting.py  requirements (1).txt  requirements.txt  run_backtest.py  setup.py  strategy_template.py  test_backtester.py  test_strategies.py
NIFTY DATA/: 20-50sma.py  Conversion to CSV.py  Enhance trading analysis script with detailed performance metrics.py  FINNIFTY-INDEX.parquet  import pandas as pd.py  read data.py
brokers/: base.py  flattrade.py
logs/: system.log.2025-11-02  system.log.2025-11-06  system.log.2025-11-08
strategies/: 1.py  base_strategy.py  ema_cross_atr_stops.py  ma_crossover - Copy.py  ma_crossover.py  strategy_template.py
tests/: test_backtest_engine.py  test_backtester.py  test_bot_components.py  test_data_downloader.py  test_event_driven_backtester.py  test_flattrade_auth.py  test_flattrade_broker.py  test_flattrade_missing.py  test_main.py  test_strategies.py
trading_bot/: setup_config.py
trading_bot/backtest/: engine.py  simulated_broker.py
trading_bot/bot/: indicators.py  position_manager.py  risk_manager.py  telegram_handler.py  trading_bot.py
trading_bot/brokers/: base.py  flattrade.py
