[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_bot"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "An algorithmic trading bot for NSE/BSE with backtesting capabilities."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_bot*"]
exclude = ["tests*"]